# burn-onnx

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT-GUIDE.md  README.md  SUPPORTED-ONNX-OPS.md  _typos.toml
.cargo/: audit.toml
.github/workflows/: bump-burn.yml  test.yml
crates/burn-import/: Cargo.toml
crates/burn-onnx/: Cargo.toml
crates/burn-onnx/src/: model_gen.rs
crates/model-checks/: README.md
crates/model-checks/albert/: Cargo.toml  build.rs
crates/model-checks/alexnet/: Cargo.toml  build.rs  get_model.py
crates/model-checks/all-minilm-l6-v2/: Cargo.toml
crates/model-checks/arcface/: Cargo.toml  build.rs  get_model.py
crates/model-checks/clip-vit-b-32-text/: Cargo.toml
crates/model-checks/clip-vit-b-32-vision/: Cargo.toml
crates/model-checks/densenet121/: Cargo.toml  build.rs  get_model.py
crates/model-checks/densenet121/src/: main.rs
crates/model-checks/depth-anything-v2/: Cargo.toml
crates/model-checks/depth-pro/: Cargo.toml  build.rs  get_model.py
crates/model-checks/inception-v1/: Cargo.toml  build.rs  get_model.py
crates/model-checks/inception-v2/: Cargo.toml  (+2 more)
crates/onnx-ir/: Cargo.toml
crates/onnx-official-tests/: Cargo.toml  README.md  build.rs  expectations.toml
crates/onnx-official-tests/src/: expectations.rs  lib.rs  pb_loader.rs
crates/onnx-official-tests/tests/: backend.rs  test_mod.rs
crates/onnx-tests/: Cargo.toml  README.md  build.rs
crates/onnx-tests/tests/: backend.rs  test_mod.rs
crates/onnx-tests/tests/add/: mod.rs
crates/onnx-tests/tests/and/: mod.rs
crates/onnx-tests/tests/argmax/: argmax_select_last_index.onnx  argmax_select_last_index.py  mod.rs
crates/onnx-tests/tests/argmin/: argmin_select_last_index.onnx  argmin_select_last_index.py  mod.rs
crates/onnx-tests/tests/bitshift/: mod.rs
crates/onnx-tests/tests/bitwise_and/: mod.rs
crates/onnx-tests/tests/bitwise_not/: mod.rs
crates/onnx-tests/tests/bitwise_or/: mod.rs
crates/onnx-tests/tests/bitwise_xor/: mod.rs
crates/onnx-tests/tests/cast_like/: cast_like.onnx  cast_like.py  mod.rs
crates/onnx-tests/tests/concat/: mod.rs
crates/onnx-tests/tests/constant/: mod.rs
crates/onnx-tests/tests/constant_of_shape/: mod.rs
crates/onnx-tests/tests/conv/: mod.rs
crates/onnx-tests/tests/conv_transpose/: mod.rs
crates/onnx-tests/tests/dequantize_linear/: mod.rs
crates/onnx-tests/tests/det/: det.onnx  det.py  det_batched.onnx  det_batched.py  mod.rs
crates/onnx-tests/tests/dft/: dft_full.onnx  dft_full.py  dft_onesided.onnx  dft_onesided.py  mod.rs
crates/onnx-tests/tests/einsum/: einsum.onnx  einsum.py  einsum_ellipsis.onnx  einsum_ellipsis.py  einsum_implicit.onnx  einsum_implicit.py  einsum_outer_int.onnx  einsum_outer_int.py  einsum_reduction.onnx  einsum_reduction.py  einsum_sam.onnx  einsum_sam.py  einsum_scalar.onnx  einsum_scalar.py  einsum_scalar_scalar.onnx  einsum_scalar_scalar.py  einsum_shadow_rhs.onnx  einsum_shadow_rhs.py  mod.rs
crates/onnx-tests/tests/expand/: expand_dynamic_where.onnx  expand_dynamic_where.py  expand_shape_as_data.onnx  expand_shape_as_data.py  mod.rs
crates/onnx-tests/tests/eye_like/: mod.rs
crates/onnx-tests/tests/gather/: gather_shape_reorder.onnx  gather_shape_reorder.py  mod.rs
crates/onnx-tests/tests/grid_sample/: mod.rs
crates/onnx-tests/tests/hamming_window/: hamming_window.onnx  hamming_window.py  hamming_window_runtime.onnx  hamming_window_runtime.py  hamming_window_symmetric.onnx  hamming_window_symmetric.py  mod.rs
crates/onnx-tests/tests/hann_window/: hann_window.onnx  hann_window.py  hann_window_runtime.onnx  hann_window_runtime.py  hann_window_symmetric.onnx  hann_window_symmetric.py  mod.rs
crates/onnx-tests/tests/imputer/: imputer.onnx  imputer.py  imputer_int.onnx  imputer_nan.onnx  imputer_nan_default.onnx  imputer_per_feature.onnx  mod.rs
crates/onnx-tests/tests/lp_pool1d/: lp_pool1d.py
crates/onnx-tests/tests/lrn/: lrn.py  lrn_custom_size2.onnx  lrn_custom_size3.onnx  lrn_default_size3.onnx  mod.rs
crates/onnx-tests/tests/matmul/: matmul_scalar_add.onnx  matmul_scalar_add.py  mod.rs
crates/onnx-tests/tests/matmulinteger/: mod.rs
crates/onnx-tests/tests/mod/: mod.rs  mod_shape.onnx  mod_shape.py
crates/onnx-tests/tests/non_max_suppression/: mod.rs  non_max_suppression.onnx  non_max_suppression.py  non_max_suppression_center.onnx  non_max_suppression_minimal.onnx  non_max_suppression_missing_middle.onnx  non_max_suppression_missing_score_threshold.onnx  non_max_suppression_multi_class.onnx
crates/onnx-tests/tests/nonzero/: mod.rs
crates/onnx-tests/tests/one_hot/: mod.rs
crates/onnx-tests/tests/or/: mod.rs
crates/onnx-tests/tests/pow/: mod.rs
crates/onnx-tests/tests/qlinear_matmul/: mod.rs  qlinear_matmul.py  qlinear_matmul_i8_saturate.onnx  qlinear_matmul_nd.onnx  qlinear_matmul_opset_10.onnx  qlinear_matmul_saturate.onnx  qlinear_matmul_scalar.onnx  qlinear_matmul_scalar_f16_scale.onnx  qlinear_matmul_u8_saturate.onnx  qlinear_matmul_vector.onnx  qlinear_matmul_vector_bf16_scale.onnx
crates/onnx-tests/tests/quantize_linear/: mod.rs
crates/onnx-tests/tests/range/: mod.rs  range_negative_delta.onnx  range_negative_delta.py
crates/onnx-tests/tests/reshape/: mod.rs
crates/onnx-tests/tests/shrink/: mod.rs  shrink.onnx  shrink.py
crates/onnx-tests/tests/simplify/: mod.rs
crates/onnx-tests/tests/sub/: mod.rs
crates/onnx-tests/tests/sum/: mod.rs
crates/onnx-tests/tests/topk/: mod.rs
crates/onnx-tests/tests/unsqueeze/: mod.rs  unsqueeze_shape_input.onnx  unsqueeze_shape_input.py
examples/image-classification-web/: Cargo.toml  README.md  build-for-web.sh  build.rs  index.html
examples/onnx-inference/: Cargo.toml  README.md
examples/raspberry-pi-pico/: Cargo.toml  build.rs
onnx-spec/ops/: Imputer.md
scoreboard/: Dockerfile  README.md  backend.py  config.json  job.yml  test_local.py
scoreboard/runner/: Cargo.toml
scoreboard/runner/src/: main.rs  model.rs
xtask/: Cargo.toml
xtask/src/: diff_expectations.rs  expectations_schema.rs  main.rs  model_check.rs  refresh_onnx_tests.rs  update_expectations.rs
(+236 files in other folders)
