[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/burn-import",
    "crates/burn-onnx",
    "crates/onnx-ir",
    "crates/onnx-ir-derive",
    "crates/onnx-official-tests",
    "crates/onnx-tests",
    "crates/model-checks/*",
    "examples/*",
    "xtask",
]

default-members = [
    "crates/burn-import",
    "crates/burn-onnx",
    "crates/onnx-ir",
    "crates/onnx-ir-derive",
    "crates/onnx-official-tests",
    "crates/onnx-tests",
    "xtask",
]

exclude = [
    "crates/model-checks/__pycache__",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.21.0-pre.3"

[workspace.lints.clippy]

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_html_tags = "deny"

[workspace.dependencies]
bytemuck = "1.25.0"
derive-new = { version = "0.7.0", default-features = false }
float-cmp = "0.10.0"
insta = "1.47.2"
log = { default-features = false, version = "0.4.29" }
proc-macro2 = "1.0.106"
quote = "1.0.45"
rust-format = "0.3.4"
tracing-core = { version = "0.1.36", default-features = false }
tracing-subscriber = "0.3.23"
syn = { version = "2.0.117", features = ["full", "extra-traits"] }

# onnx-ir
half = { version = "2.7.1", features = [
    "alloc",
    "num-traits",
    "serde",
], default-features = false }
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"
regex = { version = "1.12.3", default-features = false, features = [
    "perf",
    "unicode",
] }
rstest = "0.26.1"
serde = { version = "1.0.228", default-features = false, features = [
    "derive",
    "alloc",
] } # alloc is for no_std, derive is needed
strum = { version = "0.28.0", features = ["derive"] }
bytes = { version = "1.11.1", default-features = false }
memmap2 = { version = "0.9" }
thiserror = { version = "2.0.18", default-features = false }
toml = { version = "0.9.8", default-features = false, features = ["parse", "serde"] }

burn = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "e779b63bc01e16c6a05ccaf4e16f49d43b5d1e78" }
burn-ndarray = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "e779b63bc01e16c6a05ccaf4e16f49d43b5d1e78" }
burn-store = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "e779b63bc01e16c6a05ccaf4e16f49d43b5d1e78" }
burn-tensor = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "e779b63bc01e16c6a05ccaf4e16f49d43b5d1e78" }

### For local development. ###
# burn = { path = "../burn/crates/burn", default-features = false }
# burn-ndarray = { path = "../burn/crates/burn-ndarray", default-features = false }
# burn-store = { path = "../burn/crates/burn-store", default-features = false }
# burn-tensor = { path = "../burn/crates/burn-tensor", default-features = false }

### For the release. ###
# burn = { version = "0.21.0-pre.3", default-features = false }
# burn-ndarray = { version = "0.21.0-pre.3", default-features = false }
# burn-store = { version = "0.21.0-pre.3", default-features = false }
# burn-tensor = { version = "0.21.0-pre.3", default-features = false }

### For xtask crate ###
tracel-xtask = "=4.15.0"
# ### For local development. ###
# tracel-xtask = { path = "../xtask/crates/tracel-xtask", default-features = false }

[profile.dev]
debug = 1 # Speed up compilation time and not necessary.
