[package]
name = "onnx-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["test-flex"]
test-wgpu = ["burn/wgpu", "burn/vision"]
test-flex = ["burn/flex"]
test-tch = ["burn/tch", "burn/vision"]
test-metal = ["burn/metal", "burn/vision"]
test-candle = ["burn/candle"]

[dev-dependencies]
burn = { workspace = true }
burn-store = { workspace = true, features = ["std", "burnpack"] }
serde = { workspace = true }
float-cmp = { workspace = true }
insta = { workspace = true }
half = { workspace = true }

[build-dependencies]
burn-onnx = { path = "../burn-onnx" }
