[package]
name = "burn-onnx-runner"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn", default-features = false, features = ["std"], rev = "e779b63bc01e16c6a05ccaf4e16f49d43b5d1e78" }
burn-ndarray = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "e779b63bc01e16c6a05ccaf4e16f49d43b5d1e78" }
burn-store = { git = "https://github.com/tracel-ai/burn", default-features = false, features = ["burnpack", "std"], rev = "e779b63bc01e16c6a05ccaf4e16f49d43b5d1e78" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 1
debug = false
