[package]
name = "burn-onnx-runner"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn", default-features = false, features = ["std", "flex"], rev = "c33867c60a99958aafd4d05df782c68d242a6510" }
burn-store = { git = "https://github.com/tracel-ai/burn", default-features = false, features = ["burnpack", "std"], rev = "c33867c60a99958aafd4d05df782c68d242a6510" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 1
debug = false
