[package]
name = "burn-onnx-runner"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn", default-features = false, features = ["std", "flex"], rev = "8cc356e410f6e3a5f0b63b95a09761ffd7f1550c" }
burn-store = { git = "https://github.com/tracel-ai/burn", default-features = false, features = ["burnpack", "std"], rev = "8cc356e410f6e3a5f0b63b95a09761ffd7f1550c" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 1
debug = false
